--- a/package.json
+++ b/package.json
@@ -1,11 +1,10 @@
 {
   "name": "reactblogbackend",
   "version": "1.0.0",
-  "description": "",
   "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "start":"nodemon index.js"
+    "start": "nodemon index.js"
   },
   "keywords": [],
   "author": "",
@@ -14,5 +13,15 @@
     "cors": "^2.8.5",
     "express": "^4.18.2",
     "nodemon": "^2.0.22"
-  }
+  },
+  "devDependencies": {},
+  "repository": {
+    "type": "git",
+    "url": "git+https://github.com/ishaa0414/reactBlogBackend.git"
+  },
+  "bugs": {
+    "url": "https://github.com/ishaa0414/reactBlogBackend/issues"
+  },
+  "homepage": "https://github.com/ishaa0414/reactBlogBackend#readme",
+  "description": ""
 }
